display app index job title

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,2 +1,12 @@
-<h1>find me at apps/views/index</h1>
+<section class="index-index">
+
+  <header class="page-header">
+    <h1>Your Applications!</h1>
+  </header>
+
+  <div class="apps">
+    <%= render @apps %>
+  </div>
+
+</section>
 
