--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,9 @@
   </head>
 
   <body>
-  <% if current_user %>
-    Signed in as <%= current_user.first_name %> | <%= link_to "Logout", '/logout' %>
-  <% else %>
-    <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
-  <% end %>
 
+   <%= render 'layouts/top_nav' %> 
+   
   <%= yield %>
   </body>
 </html>
