form has been linked, not working yet

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,5 +1,5 @@
 <section class="index-index">
-
+<%= link_to "Create New App", '/apps/new' %>
   <header class="page-header">
     <h1>Your Applications!</h1>
   </header>
