--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -3,7 +3,7 @@
 <%= form_with model: @company, url: '/companies', method: :post, local: true do |f| %>
 
   company name*: <%= f.text_field :company_name %>
-  website*: <%= f.text_field :company_name %>
+  website*: <%= f.text_field :website %>
   company notes: <%= f.text_field :company_notes %>
   <%= f.submit "Submit" %>
 
