Added Bulma gem, tested Bulma functionality and changing defaults

--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">WorkStream</a>
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-      </ul>
+<nav class="navbar is-primary">
+      <a class="navbar-brand" >WorkStream</a>
+      <a class="navbar-brand" href="/">Applications</a>
 
-
-      <ul class="nav navbar-nav navbar-right">
-      
       <% if current_user %>
   Signed in as <%= current_user.first_name %> <%= current_user.last_name %> | <%= link_to "Logout", '/logout' %>
 <% else %>
   <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
 <% end %>
-      </ul>
-    </div>
-  </div>
+
 </nav>
 <html>
