finished the new and create methods along with the assoiciated forms and form partials

--- a/app/views/apps/new.html.erb
+++ b/app/views/apps/new.html.erb
@@ -1,17 +1,3 @@
 <h1>New Application</h1>
 
-<%= form_with model: @app, url: '/apps', method: :post, local: true do |f| %>
-
-  Job Title *: <%= f.text_field :job_title %>
-  Link to resume *: <%= f.text_field :resume %>
-  Link to cover Letter: <%= f.text_field :cover_letter %>
-  Link to project : <%= f.text_field :project %>
-  Deadline for project: <%= f.date_field :project_deadline %>
-  Date Applied*: <%= f.date_field :applied_date %>
-  Application Status*: <%= f.text_field :application_status %>
-  Application Notes: <%= f.text_field :notes %>
-
-  <%= f.hidden_field :company_id, value: @company.id %>
-  <%= f.submit "Submit" %>
-
-<% end %>
+<%= render "form", app: @app, comp: @company_id %>
