--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -2,7 +2,9 @@
 <header>
  
 <h1>Interviews</h1>
-<a class="btn btn-primary" href="/" role="button">Add Interview</a>
+<a class="btn btn-primary" href="<%=@app.id%>/interviews/new" role="button">Add Interview</a>
+
+
 
 </header>
  <div class="interview-panel">
