--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -48,6 +48,7 @@
     </div>  
   </article>
 
+  <a class="btn btn-primary" href="<%=@app.id%>/edit" role="button">Edit this Application</a>
   
 
 </section>
