Index design and preliminary icon work

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,22 +1,6 @@
 <section class="index-index">
 <%= link_to "Create New App", '/companies/new' %>
-  <header class="page-header">
-    <h1>Your Applications!</h1>
-  </header>
-
   <div class="apps">
-    <% @apps.each do |app| %>
-      <%= render 'app', app: app%>
-    <%end%>
+    <%= render partial: "app", locals: {apps:@apps} %>
   </div>
-
 </section>
-
-  
-  
-  
-  
-  
-  
-  
-  
