--- a/app/views/apps/_interview.html.erb
+++ b/app/views/apps/_interview.html.erb
@@ -11,6 +11,7 @@
 <h3>Completed</h3>
 <p>true</p>
 <%end%>
+<a class="btn btn-primary" href="/interviews/<%=interview.id%>/edit" role="button">Edit this Interview</a>
 </div>
 
 <article>
