--- a/app/views/apps/edit.html.erb
+++ b/app/views/apps/edit.html.erb
@@ -1,3 +1,2 @@
 <h1>Edit Application</h1>
-<%=@app.inspect %>
-<%= render "form", app: @app, comp: @app.company_id %>
+<%= render "form", app: @app %>
