--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html>
-<nav class="navbar is-primary">
-      <a class="navbar-brand" >WorkStream</a>
-      <a class="navbar-brand" href="/">Applications</a>
-      <% if current_user %>
-  Signed in as <%= current_user.first_name %> <%= current_user.last_name %> | <%= link_to "Logout", '/logout' %>
-<% else %>
-  <%= link_to 'Login', '/login' %> | <%= link_to 'Signup', '/signup' %>
-<% end %>
+<nav class="navbar is-primary is-fixed-top" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <div class="navbar-item">
+     ApplyYourself
+     </div>
+     <a class="navbar-item"  href="/">
+        Applications
+      </a>
+
+       <div id="navbarBasicExample" class="navbar-menu">
+
+      <div class="navbar-end">
+    <% if current_user %>
+    <div class="navbar-item">
+    Signed in as <%= current_user.first_name %> <%= current_user.last_name %>  
+    </div>
+    <div class="navbar-item">
+      <a class="button is-light" href='/logout'>
+            Log out
+          </a>    
+    </div>
+    <% else %>
+      <div class="navbar-item">
+        <div class="buttons">
+          <a class="button" href='/signup' >
+            <strong>Sign up</strong>
+          </a>
+          <a class="button is-light" href='/login'>
+            Log in
+          </a>
+        </div>
+      </div>
+      <% end %>
+    </div>
+ 
+  </div>
+
+  </div>
+
+ 
 </nav>
 <html>
