--- a/app/assets/stylesheets/apps.scss
+++ b/app/assets/stylesheets/apps.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the Apps controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.button-shift {
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+}
+
+span {
+  text-align:center;
+}
