--- a/app/views/apps/_app.html.erb
+++ b/app/views/apps/_app.html.erb
@@ -1,46 +1,44 @@
-<table class="table is-striped is-fullwidth">
-  <thead>
-    <tr>
-      <th>Job Title</th>
-      <th>Company Name</th>
-      <th>Upcoming Dates</th>
-      <th>Application Status</th>
-    </tr>
-  </thead>
-  <tbody>
-    <%- apps.each do |app|%>
+<div class="container">
+  <table class="table is-striped">
+    <thead>
       <tr>
-        
-        <th>
-          <%= link_to app do %>
-            <%= app.job_title%>
-          <% end %>
-        </th>
-
-        <td>
-          <%= app.company.company_name%>
-        </td>
-
-        <td>
-        <%if route_finder(app.id)%>
-          <%= route_finder(app.id).interview_date%>
-          <%else%>
-          <%=""%>
-        <%end%>
-        </td>
-        
-        <td>
-        <%if app.application_status == "Interview pending"%>
-        <span class="icon is-large">
-          <i class="fa fa-file-text-o"></i>
-          <i class="fa fa-camera-retro"></i>
-          <i class="fa fa-file-o" aria-hidden="true"></i> 
-          <i class="fa fa-users" aria-hidden="true"></i>
-        </span>
-        <%end%>
-        </td>
+        <th>Job Title</th>
+        <th>Company Name</th>
+        <th>Upcoming Dates</th>
+        <th>Application Status</th>
       </tr>
-    <%end%>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <%- apps.each do |app|%>
+        <tr>
+          
+          <th>
+            <%= link_to app do %>
+              <%= app.job_title%>
+            <% end %>
+          </th>
 
+          <td>
+            <%= app.company.company_name%>
+          </td>
+
+          <td>
+          <%if route_finder(app.id)%>
+            <%= route_finder(app.id).interview_date%>
+            <%else%>
+            <%=""%>
+          <%end%>
+          </td>
+          
+          <td class="status-icon">
+            <%if app.application_status == "Interview pending"%>
+            <span class="icon is-large">
+              <i class="fa fa-file-text-o fa-3x"></i>
+            </span>
+            <%end%>
+          </td>
+        </tr>
+      <%end%>
+    </tbody>
+  </table>
+</div>
