--- a/app/views/apps/_app.html.erb
+++ b/app/views/apps/_app.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <table class="table is-striped">
+  <table class="table is-striped is-hoverable">
     <thead>
       <tr>
         <th>Job Title</th>
@@ -12,29 +12,37 @@
       <%- apps.each do |app|%>
         <tr>
           
-          <th>
+          <th class="job-title pt-3">
             <%= link_to app do %>
               <%= app.job_title%>
             <% end %>
           </th>
 
-          <td>
+          <td class="company-name pt-3">
             <%= app.company.company_name%>
           </td>
 
-          <td>
+          <td class="interview-date pt-3">
           <%if route_finder(app.id)%>
-            <%= route_finder(app.id).interview_date%>
+            <%= route_finder(app.id).interview_date.strftime("%B %d, %Y")%>
             <%else%>
             <%=""%>
           <%end%>
           </td>
           
-          <td class="status-icon">
-            <%if app.application_status == "Interview pending"%>
-            <span class="icon is-large">
-              <i class="fa fa-file-text-o fa-3x"></i>
-            </span>
+          <td class="status-icon pl-6">
+            <%if app.application_status == "Resume sent"%>
+              <span class="icon is-medium has-text-success">
+                <i class="fa fa-file-text fa-2x" aria-hidden="true"></i>
+              </span>
+            <%elsif app.application_status == "Interview pending"%>
+              <span class="icon is-medium has-text-warning">
+                <i class="fa fa-users fa-2x" aria-hidden="true"></i>
+              </span>
+            <%elsif app.application_status == "Interview completed"%>
+              <span class="icon is-medium has-text-success">
+                <i class="fa fa-users fa-2x" aria-hidden="true"></i>
+              </span>
             <%end%>
           </td>
         </tr>
