--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -17,7 +17,9 @@
         <article class="tile is-child notification is-danger">
           <p class="title">Interviews</p>
           <p class="subtitle">Whats next?</p>
-          <a class="btn btn-primary" href="<%=@app.id%>/interviews/new" role="button">Add Interview</a>
+          <div class="buttons">
+          <a class="button is-primary" href="<%=@app.id%>/interviews/new">Add Interview</a>
+          </div>
           <div class="content">
            <%if interview_finder(@app.id)%>
             <% interview_finder(@app.id).each do |interview|%>
@@ -45,7 +47,9 @@
       <div class="tile is-parent">
         <article class="tile is-child notification is-info">
           <p class="title">Company</p>
-          <a class="btn btn-primary" href="/companies/<%=@app.company.id%>/edit" role="button">Edit this Company</a>
+          <div class="buttons">
+          <a class="button is-primary" href="/companies/<%=@app.company.id%>/edit" role="button">Edit this Company</a>
+         </div>
           <p class="subtitle"><%=@app.company.company_name%></p>
            <p class="subtitle">Website</p>
         <div class="content">
@@ -67,7 +71,9 @@
     <article class="tile is-child notification is-primary">
       <div class="content">
         <p class="title">Job Details</p>
-        <a class="btn btn-primary" href="<%=@app.id%>/edit" role="button">Edit this Application</a>
+        <div class="buttons">
+        <a class="button is-primary" href="<%=@app.id%>/edit" role="button">Edit this Application</a>
+        </div>
          <p class="subtitle">Project Deadline</p>
         <div class="content">
         <%= @app.project_deadline %>
