--- a/app/views/apps/_interview.html.erb
+++ b/app/views/apps/_interview.html.erb
@@ -12,7 +12,7 @@
 <h3>Completed</h3>
 <p>true</p>
 <%end%>
-<a class="btn btn-primary" href="/interviews/<%=interview.id%>/edit" role="button">Edit this Interview</a>
+<a class="button is-primary" href="/interviews/<%=interview.id%>/edit" role="button">Edit this Interview</a>
 </div>
 
 <article>
