created a company list so user can choose from list of companies if not listed

--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,5 +1,5 @@
 <section class="index-index">
-<%= link_to "Create New App", '/companies/new' %>
+<%= link_to "Create New App", '/companies' %>
   <div class="apps">
     <%= render partial: "app", locals: {apps:@apps} %>
   </div>
