--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -1,3 +1,5 @@
+
+<%= all_companies().inspect %>
 <section class="hero is-info my-4">
   <div class="hero-body">
     <p class="title">
@@ -15,50 +17,60 @@
     <div class="tile">
       <div class="tile is-parent is-vertical">
         <article class="tile is-child notification is-danger">
-          <p class="title">Interviews</p>
+          <p class="title">Upcoming Interviews</p>
           <p class="subtitle">Whats next?</p>
           <a class="btn btn-primary" href="<%=@app.id%>/interviews/new" role="button">Add Interview</a>
           <div class="content">
-           <%if interview_finder(@app.id)%>
-            <% interview_finder(@app.id).each do |interview|%>
-            <%= render 'interview', interview: interview %>
+            <%if interview_finder(@app.id)%>
+              <% interview_finder(@app.id).each do |interview|%>
+                <%if !interview_completed(interview)%>
+                  <%= render 'interview', interview: interview %>
+                <%end%>
               <%end%>
             <%end%>
-            </div>
+          </div>
         </article>
-        <article class="tile is-child notification is-success">
-          <p class="title">Documents</p>
-     <p class="subtitle">Resume</p>
-        <div class="content">
-        <%= @app.resume %>
-         </div>
-         <p class="subtitle">Cover Letter</p>
-        <div class="content">
-        <%= @app.cover_letter %>
-        </div>
-         <p class="subtitle">Project</p>
-        <div class="content">
-        <%= @app.project %>
-        </div>
+        <article class="tile is-child notification is-warning">
+          <p class="title">Past Interviews</p>
+          <div class="content">
+            <%if interview_finder(@app.id)%>
+              <% interview_finder(@app.id).each do |interview|%>
+                <%if interview_completed(interview)%>
+                  <%= render 'interview', interview: interview %>
+                <%end%>
+              <%end%>
+            <%end%>
+          </div>
         </article>
       </div>
-      <div class="tile is-parent">
+      <div class="tile is-parent is-vertical">
         <article class="tile is-child notification is-info">
           <p class="title">Company</p>
           <a class="btn btn-primary" href="/companies/<%=@app.company.id%>/edit" role="button">Edit this Company</a>
           <p class="subtitle"><%=@app.company.company_name%></p>
-           <p class="subtitle">Website</p>
-        <div class="content">
-        <%= @app.company.website %>
-        </div>
-         <p class="subtitle">Notes</p>
+          <p class="subtitle">Website</p>
           <div class="content">
-          <%=@app.company.company_notes%>
-         </div>
-
-          <%# <figure class="image is-4by3">
-            <img src="https://bulma.io/images/placeholders/640x480.png">
-          </figure> %>
+            <%= @app.company.website %>
+          </div>
+          <p class="subtitle">Notes</p>
+          <div class="content">
+            <%=@app.company.company_notes%>
+          </div>
+        </article>
+        <article class="tile is-child notification is-success">
+          <p class="title">Documents</p>
+          <p class="subtitle">Resume</p>
+          <div class="content">
+            <%= @app.resume %>
+          </div>
+          <p class="subtitle">Cover Letter</p>
+          <div class="content">
+            <%= @app.cover_letter %>
+          </div>
+          <p class="subtitle">Project</p>
+          <div class="content">
+            <%= @app.project %>
+          </div>
         </article>
       </div>
     </div>
@@ -68,25 +80,25 @@
       <div class="content">
         <p class="title">Job Details</p>
         <a class="btn btn-primary" href="<%=@app.id%>/edit" role="button">Edit this Application</a>
-         <p class="subtitle">Project Deadline</p>
+        <p class="subtitle">Project Deadline</p>
         <div class="content">
-        <%= @app.project_deadline %>
+          <%= @app.project_deadline %>
         </div>
         <p class="subtitle">Application Deadline</p>
         <div class="content">
-        <%= @app.application_deadline %>
+          <%= @app.application_deadline %>
         </div>
         <p class="subtitle">Application Status</p>
         <div class="content">
-        <%= @app.application_status %>
+          <%= @app.application_status %>
         </div>
         <p class="subtitle">Applied Date</p>
         <div class="content">
-        <%= @app.applied_date %>
+          <%= @app.applied_date %>
         </div>
         <p class="subtitle">Notes</p>
         <div class="content">
-        <%= @app.notes %>
+          <%= @app.notes %>
         </div>
       </div>
     </article>
