--- a/app/views/apps/_interview.html.erb
+++ b/app/views/apps/_interview.html.erb
@@ -5,7 +5,9 @@
 <p><%=interview.interview_type%></h3>
 <p class="subtitle">Date</p>
 <p><%=interview.interview_date%></p>
-<a class="btn btn-primary" href="/interviews/<%=interview.id%>/edit" role="button">Edit this Interview</a>
+<div class="buttons">
+          <a class="button is-primary" href="/interviews/<%=interview.id%>/edit" role="button">Edit this Interview</a>
+          </div>
 </div>
 
 <article>
