Added table sort logic, retooled and added seeds with Faker, fixed all_companies logic in application_controller

--- a/app/views/companies/_company.html.erb
+++ b/app/views/companies/_company.html.erb
@@ -9,7 +9,7 @@
     <tr>
       
       <th>
-        <%= link_to "#{company[0].company_name}", "/companies/#{company[0].id}/apps/new" %>
+        <%= link_to company.company_name, "/companies/#{company.id}/apps/new" %>
       </th>
     </tr>
   <% end %>
