added form design

--- a/app/assets/stylesheets/apps.scss
+++ b/app/assets/stylesheets/apps.scss
@@ -13,6 +13,15 @@
   justify-content: center;
 }
 
+.form_container {
+  width: 50vw;
+  border: 5px solid black;
+  padding: 40px;
+}
+.form_button {
+  text-align: center;
+}
+
 // .status-icon {
 //   // text-align:center;
 // }
