--- a/app/views/companies/edit.html.erb
+++ b/app/views/companies/edit.html.erb
@@ -1,3 +1,9 @@
-<h1>Edit Company</h1>
-<%= render "form", company: @company %>
+<div class="section">
+  <div class="container" style="align-items:center;">
+    <div class="content is-medium form_container" >
+      <h1 style="text-align:center;">Edit Company</h1>
+      <%= render "form", company: @company %>
+    </div>
+  </div>
+</div> 
 
