--- a/app/views/companies/new.html.erb
+++ b/app/views/companies/new.html.erb
@@ -1,4 +1,8 @@
-
-<h3> Step 1: Company info </h3>
-
-<%= render "form", company: @company %>
+<div class="section">
+  <div class="container" style="align-items:center;">
+    <div class="content is-medium form_container" >
+      <h1 style="text-align:center;">New Company</h1>
+      <%= render "form", company: @company %>
+    </div>
+  </div>
+</div> 
