--- a/app/assets/stylesheets/interviews.scss
+++ b/app/assets/stylesheets/interviews.scss
@@ -1,3 +1,7 @@
 // Place all the styles related to the Interviews controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.form_horizantal {
+  justify-content: space-around;
+}
