--- a/app/views/interviews/edit.html.erb
+++ b/app/views/interviews/edit.html.erb
@@ -1,3 +1,10 @@
-<h1>New Interview</h1>
+<div class="section">
+  <div class="container" style="align-items:center;">
+    <div class="content is-medium form_container" style="text-align:center;">
+      <h1 style="text-align:center;">Edit Interview</h1>
+      <%= render "form", interview: @interview %>
+    </div>
+  </div>
+</div> 
 
-<%= render "form", interview: @interview %>
+
