--- a/app/views/interviews/new.html.erb
+++ b/app/views/interviews/new.html.erb
@@ -1,46 +1,55 @@
-<h1>New Interview</h1>
-<%= form_with model: @interview, url: "/apps/#{@app.id}/interviews", method: :post, local: true do |form| %>
-  <div>
-    <%= form.label :interview_number, "Interview Number (required)" %><br>
-    <%= form.number_field :interview_number %>
-    <% @interview.errors.full_messages_for(:interview_number).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
+<div class="section">
+  <div class="container" style="align-items:center;">
+    <div class="content is-medium form_container" >        
+      <h1>New Interview</h1>
+      <%= form_with model: @interview, url: "/apps/#{@app.id}/interviews", method: :post, local: true do |form| %>
+        <div class="field is-horizontal form_horizantal">
+          <div class="field">
+            <%= form.label :interview_number, "Interview Number (required)" %><br>
+            <%= form.number_field :interview_number %>
+            <% interview.errors.full_messages_for(:interview_number).each do |message| %>
+              <div><%= message %></div>
+            <% end %>
+          </div>
+      
+          <div class="field">
+            <%= form.label :interview_date, "Interview Date (required)" %><br>
+            <%= form.date_field :interview_date %>
+            <% interview.errors.full_messages_for(:interview_date).each do |message| %>
+              <div><%= message %></div>
+            <% end %>
+          </div>
+        </div>
+    
+        <div class="field">
+          <%= form.label :interview_type %><br>
+          <%= form.text_field :interview_type %>
+          <% interview.errors.full_messages_for(:interview_type).each do |message| %>
+            <div><%= message %></div>
+          <% end %>
+        </div>
+      
+        <div class="field">
+          <%= form.label :interview_notes %><br>
+          <%= form.text_field :interview_notes %>
+          <% interview.errors.full_messages_for(:interview_notes).each do |message| %>
+            <div><%= message %></div>
+          <% end %>
+        </div>
+      
+        <div class="field">
+          <%= form.label :thank_you, "Thank you email sent?" %><br>
+          <%= form.check_box :thank_you %>
+          <% interview.errors.full_messages_for(:thank_you).each do |message| %>
+            <div><%= message %></div>
+          <% end %>
+        </div>
+      
+        <div class= "form_button">
+          <%= form.submit %>
+        </div>
+      <% end %>
+    </div>
   </div>
-
-  <div>
-    <%= form.label :interview_date, "Interview Date (required)" %><br>
-    <%= form.date_field :interview_date %>
-    <% @interview.errors.full_messages_for(:interview_date).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.label :interview_type %><br>
-    <%= form.text_field :interview_type %>
-    <% @interview.errors.full_messages_for(:interview_type).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.label :interview_notes %><br>
-    <%= form.text_area :interview_notes %>
-    <% @interview.errors.full_messages_for(:interview_notes).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-
-  <div>
-    <%= form.label :thank_you, "Thank you email sent?" %><br>
-    <%= form.check_box :thank_you %>
-    <% @interview.errors.full_messages_for(:thank_you).each do |message| %>
-      <div><%= message %></div>
-    <% end %>
-  </div>
-  
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div> 
+    
