--- a/app/views/apps/_app.html.erb
+++ b/app/views/apps/_app.html.erb
@@ -34,14 +34,17 @@
             <%if app.application_status == "Resume sent"%>
               <span class="icon is-medium has-text-success" aria-label="Resume sent">
                 <i class="fa fa-file-text fa-2x" title="Resume sent"></i>
+                <div class="hide">1</div>
               </span>
             <%elsif app.application_status == "Interview pending"%>
               <span class="icon is-medium has-text-warning">
                 <i class="fa fa-users fa-2x" title="Interview pending" aria-hidden="true"></i>
+                <div class="hide">2</div>
               </span>
             <%elsif app.application_status == "Interview completed"%>
               <span class="icon is-medium has-text-success">
                 <i class="fa fa-users fa-2x" title="Interview completed" aria-hidden="true"></i>
+                <div class="hide">3</div>
               </span>
             <%end%>
           </td>
